web-infras/parser/tests/fixtures/esprima/es2017/async/methods/invalid-async-getter/output.txt
[SyntaxError]: getter can not be async or generator. (1,17)
1|x = { async get g() {} }
 |               ^
